apps/website/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http
      namespace: infra
  hostnames:
    - typie.co
    - auth.typie.co
    - typie.me
    - "*.typie.me"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: website
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
